--- a/vignettes/Example.Rmd
+++ b/vignettes/Example.Rmd
@@ -20,10 +20,7 @@ library(datadef)
 
 
 ```{r}
-path <- "C:/Users/cf124952/ATorus/GSK Atorus Open Source Collaboration - Metadata/GSK_SDTM_defines/mid207966/define.xml"
-
-# Read in the file
-doc <- xmlTreeParse(path, useInternalNodes = TRUE)
+doc <- xmlTreeParse("../R/define.xml", useInternalNodes = TRUE)
 
 ds_spec <- xml_to_ds_spec(doc)
 ds_vars <- xml_to_ds_vars(doc)
@@ -31,50 +28,5 @@ var_spec <- xml_to_var_spec(doc)
 value_spec <- xml_to_value_spec(doc)
 code_list <- xml_to_code_list(doc)
 
-
-# Proof this catches things is here: IETESTCD
-
 datadef(ds_spec, ds_vars, var_spec, value_spec, derivations = NULL, code_list)
-test
-object.size(test)
-
-# Notes from creation, derivations are sometimes duplicated, should the builder reduce the duplicates
-
-
-# Potential controversial things I have done:
-#   * Collapse format information to live in codelist table
-#   * Move origin, codelist and derivation id to value_spec from var_spec
-#   * argument to do autoclean on the where statement. Would still be a string but really for bang bang
-#       Backlog
-
-
-# List of tables needed
-# 1) ds_spec (dataset, label):
-#  This contians each dataset in the study, with the labels for each
-# 2) ds_vars (dataset, variable, keep, key):
-#  This has information on what variables are in each dataset + plus dataset specific variable information
-# 3) var_spec (variable, label, length, ?format [might be the same as code list]):
-#  This has variable information that is shared across all datasets
-# 4) value_spec (dataset, variaable, where, type, codelist, origin, derivation_id):
-#  This has parametere specific infromation, as data is long the specs for wbc might be difference the hgb
-# 5) derivations (derivation_id, derivation):
-#  This contains derivation, it allows for different variables to have the same derivation. (derivation just string)
-# 6) codelist (codelist, code, decode):
-#  This contains the code/decode information, [with the potential to have format as a decode]
-# 7) change log
-
-
-
-# Question:
-# will there ever be a codelist with a permitted_val, No
-# should the change log include the row that was changed
-# lib_spec too complicated should it be split into 3
-# Should lib_spec only have two?
-#        Permitted_val would be for things without decode
-#        pro: any missing values in decode will be intentional and something we could give warning for
-#        Also with normalized data it will reduce data size in the long run
-#        Con: Could result in more complex data entry, We will need a rule on knowing when to go
-# Do we want sig dig? No
-#   * argument to do autoclean on the where statement.
-#     Would still be a string but really for bang bang
 ```
