--- a/vignettes/Example.Rmd
+++ b/vignettes/Example.Rmd
@@ -20,13 +20,14 @@ library(datadef)
 
 
 ```{r}
-doc <- xmlTreeParse("../R/define.xml", useInternalNodes = TRUE)
+doc <- xmlTreeParse("C:/Users/cf124952/ATorus/GSK Atorus Open Source Collaboration - Metadata/GSK_SDTM_defines/mid201584/define.xml", useInternalNodes = TRUE)
 
 ds_spec <- xml_to_ds_spec(doc)
 ds_vars <- xml_to_ds_vars(doc)
 var_spec <- xml_to_var_spec(doc)
 value_spec <- xml_to_value_spec(doc)
 code_list <- xml_to_code_list(doc)
+derivations <- xml_to_derivations(doc)
 
 datadef(ds_spec, ds_vars, var_spec, value_spec, derivations = NULL, code_list)
 ```
