--- a/vignettes/Example.Rmd
+++ b/vignettes/Example.Rmd
@@ -19,7 +19,7 @@ library(datadef)
 ```
 
 
-```{r}
+```{#r}
 doc <- xmlTreeParse("C:/Users/cf124952/ATorus/GSK Atorus Open Source Collaboration - Metadata/GSK_SDTM_defines/mid201584/define.xml", useInternalNodes = TRUE)
 
 ds_spec <- xml_to_ds_spec(doc)
@@ -29,5 +29,5 @@ value_spec <- xml_to_value_spec(doc)
 code_list <- xml_to_code_list(doc)
 derivations <- xml_to_derivations(doc)
 
-datadef(ds_spec, ds_vars, var_spec, value_spec, derivations = NULL, code_list)
+datadef(ds_spec, ds_vars, var_spec, value_spec, derivations = derivations, code_list)
 ```
