--- a/vignettes/Example.Rmd
+++ b/vignettes/Example.Rmd
@@ -29,5 +29,5 @@ value_spec <- xml_to_value_spec(doc)
 code_list <- xml_to_code_list(doc)
 derivations <- xml_to_derivations(doc)
 
-test <- datadef(ds_spec, ds_vars, var_spec, value_spec, derivations = derivations, code_list)
+test <- datadef(ds_spec, ds_vars, var_spec, value_spec, derivations, code_list)
 ```
