--- a/vignettes/Example.Rmd
+++ b/vignettes/Example.Rmd
@@ -29,5 +29,16 @@ value_spec <- xml_to_value_spec(doc)
 code_list <- xml_to_code_list(doc)
 derivations <- xml_to_derivations(doc)
 
+# an active binding that CAN filter R6 object that can filter
+# active binding to do it properly
+# 
+
 test <- metacore(ds_spec2, ds_vars, var_spec, value_spec, derivations, code_list)
+
+test$ds_spec %>%
+  filter(dataset == "DM")
+
+
+# ds_vars <- dataset == "DM"
+# var_spec <- 
 ```
