--- a/vignettes/Example.Rmd
+++ b/vignettes/Example.Rmd
@@ -30,3 +30,15 @@ code_list <- xml_to_code_list(doc)
 derivations <- xml_to_derivations(doc)
 
 test <- metacore(ds_spec2, ds_vars, var_spec, value_spec, derivations, code_list)
+
+# filter object by dataset
+test %>%
+  filter_dataset("DM")
+
+test$ds_spec
+test$ds_vars
+test$var_spec
+test$value_spec
+test$codelist
+test$derivations
+```
