--- a/vignettes/Example.Rmd
+++ b/vignettes/Example.Rmd
@@ -33,7 +33,9 @@ test <- metacore(ds_spec2, ds_vars, var_spec, value_spec, derivations, code_list
 
 # filter object by dataset
 test %>%
-  filter_dataset("DM")
+  select_dataset("DM")
+
+
 
 test$ds_spec
 test$ds_vars
@@ -41,4 +43,6 @@ test$var_spec
 test$value_spec
 test$codelist
 test$derivations
+
+
 ```
