--- a/vignettes/Example.Rmd
+++ b/vignettes/Example.Rmd
@@ -20,13 +20,13 @@ library(metacore)
 
 
 ```{r}
-doc <- xmlTreeParse("define.xml", useInternalNodes = TRUE)
+doc <- xmlTreeParse(metacore_example("define.xml"), useInternalNodes = TRUE)
 
 ds_spec2 <- xml_to_ds_spec(doc)
 ds_vars <- xml_to_ds_vars(doc)
 var_spec <- xml_to_var_spec(doc)
 value_spec <- xml_to_value_spec(doc)
-code_list <- xml_to_code_list(doc)
+code_list <- xml_to_codelist(doc)
 derivations <- xml_to_derivations(doc)
 
 test <- metacore(ds_spec2, ds_vars, var_spec, value_spec, derivations, code_list)
